---------------------------------------------------------------------------------------------------
Version: 0.3.17
Date: 2021-02-26
  Changes:
    - by default, autoresearch adds only 1 request at a time
---------------------------------------------------------------------------------------------------
Version: 0.3.16
Date: 2021-02-25
  Bugfixes:
    - Mitigating Crash opening ingteb GUI in an active py game
---------------------------------------------------------------------------------------------------
Version: 0.3.15
Date: 2021-02-24
  Bugfixes:
    - Fixing Crash loading a py game Part iii
---------------------------------------------------------------------------------------------------
Version: 0.3.14
Date: 2021-02-23
  Bugfixes:
    - Fixing Crash loading a py game
---------------------------------------------------------------------------------------------------
Version: 0.3.13
Date: 2021-02-23
  Bugfixes:
    - Fixing Crash loading a py game
---------------------------------------------------------------------------------------------------
Version: 0.3.12
Date: 2021-02-22
  Changes:
    - tooltip for categories
    - OnResearchCanceled introduced
    - settings for presentator
    - easier remindor settings
  Bugfixes:
    - fixing crash when clicking on steam
    - get mod Nullius working
---------------------------------------------------------------------------------------------------
Version: 0.3.11
Date: 2021-01-20
  Changes:
    - localisation improved: text styles
    - providing better information on technology effets panel
    - [tech] using __debugline 
  Bugfixes:
    - fixing crash clicking on lab in technology panel header
    - fixing crash "Too many parameters for localised string: 22 > 20 (limit). in property tree at ROOT.tooltip[2]"
    - fixing crash when for a recipe ingredients or products are not unique
---------------------------------------------------------------------------------------------------
Version: 0.3.10