@@ -1,20 +1,24 @@
 local function modify(data, tag)
-    local value = data[tag]
-    if value == true then
-        data[tag]= "1"
-    elseif value == false then
-        data[tag]= "off"
+    if data then
+        local value = data[tag]
+        if value == true then
+            data[tag] = "1"
+        elseif value == false then
+            data[tag] = "off"
+        end
     end
 end
 
 for index, player in pairs(game.players) do
     local playerData = global.Players[index]
     if playerData then
-        playerData.Remindor.Settings = nil
+        if playerData.Remindor then playerData.Remindor.Settings = nil end
         for _, task in ipairs(playerData.Remindor.List) do
-            modify(task.Settings,"AutoResearch")
+            modify(task.Settings, "AutoResearch")
         end
-        modify(playerData.SelectRemindor.Settings,"AutoResearch")
+        if playerData.SelectRemindor then
+            modify(playerData.SelectRemindor.Settings, "AutoResearch")
+        end
         player.print("[ingteb] migration 0.3.17")
     end
 end
