@@ -3,6 +3,9 @@ Version: 0.3.17
 Date: 2021-02-26
   Changes:
     - by default, autoresearch adds only 1 request at a time
+  Bugfixes:
+    - fixing crash when closing SelectRemindor
+    - fixing crash when loading save file
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.16
 Date: 2021-02-25
